infrastructure/k8s/persistent/docsengn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docsengn
  namespace: docsengn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docsengn
  template:
    metadata:
      labels:
        app: docsengn
    spec:
      containers:
      - name: docsengn
        image: docsengn:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: docsengn
  namespace: docsengn
spec:
  selector:
    app: docsengn
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
