infrastructure/k8s/persistent/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: digitalengn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.0.0
        args: ["start-dev", "--http-relative-path=/auth", "--import-realm"]
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: keycloak-data
          mountPath: /opt/keycloak/data
        - name: realm-config
          mountPath: /opt/keycloak/data/import
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-data-pvc
      - name: realm-config
        configMap:
          name: keycloak-realm-config
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: digitalengn
spec:
  selector:
    app: keycloak
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
