infrastructure/k8s/persistent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digitalengn-ingress
  namespace: digitalengn
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digitalengn
            port:
              number: 80
      - path: /plan
        pathType: Prefix
        backend:
          service:
            name: openproject
            port:
              number: 80
      - path: /git
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
